# diff-diff

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  METHODOLOGY_REVIEW.md  PLAN_HONEST_DID.md  PR_26_CODE_REVIEW.md  README.md  ROADMAP.md  TODO.md  pyproject.toml
.claude/: memory.md
.claude/commands/: bump-version.md  docs-check.md  pre-merge-check.md  push-pr-update.md  review-pr.md  submit-pr.md  validate-tutorial.md
.github/: pull_request_template.md
.github/codex/prompts/: pr_review.md
.github/workflows/: ai_pr_review.yml  claude-code-review.yml  publish.yml  rust-test.yml
benchmarks/: README.md  compare_results.py  run_benchmarks.py
benchmarks/R/: benchmark_did.R  benchmark_fixest.R  benchmark_honest.R  benchmark_synthdid.R  requirements.R
benchmarks/data/synthetic/: basic_did.csv  sdid_data.csv  staggered_large.csv  staggered_simple.csv
benchmarks/python/: benchmark_basic.py  benchmark_callaway.py  benchmark_honest.py  benchmark_synthdid.py  utils.py
benchmarks/results/: comparison_report.txt
benchmarks/results/accuracy/: python_basic.json  python_callaway.json  python_synthdid.json  r_basic.json  r_callaway.json  r_synthdid.json
carousel/: carousel.html  generate_pdf.py
diff_diff/: __init__.py  _backend.py  bacon.py  datasets.py  diagnostics.py  estimators.py  honest_did.py  linalg.py  power.py  prep.py  prep_dgp.py  pretrends.py  results.py  staggered.py  staggered_aggregation.py  staggered_bootstrap.py  staggered_results.py  sun_abraham.py  synthetic_did.py  triple_diff.py  trop.py  twfe.py  utils.py  visualization.py
docs/: benchmarks.rst  choosing_estimator.rst  conf.py  index.rst  performance-plan.md  python_comparison.rst  quickstart.rst  r_comparison.rst  requirements.txt  troubleshooting.rst
docs/_static/: custom.css
docs/api/: diagnostics.rst  estimators.rst  honest_did.rst  index.rst  power.rst  prep.rst  pretrends.rst  results.rst  staggered.rst  triple_diff.rst  trop.rst  utils.rst  visualization.rst
docs/api/_autosummary/: diff_diff.CallawaySantAnna.rst  diff_diff.CallawaySantAnnaResults.rst  diff_diff.DeltaRM.rst  diff_diff.DeltaSD.rst  diff_diff.DeltaSDRM.rst  diff_diff.DiDResults.rst  diff_diff.DifferenceInDifferences.rst  diff_diff.GroupTimeEffect.rst  diff_diff.HonestDiD.rst  diff_diff.HonestDiDResults.rst  diff_diff.MultiPeriodDiD.rst  diff_diff.MultiPeriodDiDResults.rst  diff_diff.PeriodEffect.rst  diff_diff.PlaceboTestResults.rst  diff_diff.SensitivityResults.rst  diff_diff.SyntheticDiD.rst  diff_diff.SyntheticDiDResults.rst  diff_diff.TwoWayFixedEffects.rst  diff_diff.WildBootstrapResults.rst  diff_diff.aggregate_to_cohorts.rst  diff_diff.balance_panel.rst  diff_diff.check_parallel_trends.rst  diff_diff.check_parallel_trends_robust.rst  diff_diff.compute_honest_did.rst  diff_diff.create_event_time.rst  diff_diff.equivalence_test_trends.rst  diff_diff.generate_did_data.rst  diff_diff.leave_one_out_test.rst  diff_diff.make_post_indicator.rst  diff_diff.make_treatment_indicator.rst  diff_diff.permutation_test.rst  diff_diff.placebo_group_test.rst  diff_diff.placebo_timing_test.rst  diff_diff.plot_event_study.rst  diff_diff.plot_group_effects.rst  diff_diff.plot_honest_event_study.rst  diff_diff.plot_sensitivity.rst  diff_diff.rank_control_units.rst  diff_diff.run_all_placebo_tests.rst  diff_diff.run_placebo_test.rst  (+5 more)
docs/methodology/: REGISTRY.md
docs/reviews/: pr22_covariate_adjustment_review.md
docs/tutorials/: 01_basic_did.ipynb  02_staggered_did.ipynb  03_synthetic_did.ipynb  04_parallel_trends.ipynb  05_honest_did.ipynb  06_power_analysis.ipynb  07_pretrends_power.ipynb  08_triple_diff.ipynb  09_real_world_examples.ipynb  10_trop.ipynb  README.md
examples/: 03_synthetic_did.ipynb  README.md
rust/: Cargo.toml
rust/src/: bootstrap.rs  lib.rs  linalg.rs  trop.rs  weights.rs
tests/: __init__.py  conftest.py  test_bacon.py  test_datasets.py  test_diagnostics.py  test_estimators.py  test_honest_did.py  test_linalg.py  test_methodology_callaway.py  test_methodology_did.py  test_power.py  test_prep.py  test_pretrends.py  test_rust_backend.py  test_se_accuracy.py  test_staggered.py  test_sun_abraham.py  test_triple_diff.py  test_trop.py  test_utils.py  test_visualization.py  test_wild_bootstrap.py
